# goit-pythonweb-hw-012

./: .example.env  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
docs/: conf.py  index.rst
docs/_static/: custom.css
migrations/: env.py
migrations/versions/: 967393779870_add_to_model_user_filed_confirmed.py  dd3909401dcd_add_user.py  efee539038a4_init.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/cache/: redis_client.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
tests/: conftest.py  test_contacts_repository_unit.py  test_integration_auth.py  test_integration_contacts.py  test_integration_users.py  test_users_repository_unit.py
