[tool.poetry]
name = "address-book"
version = "0.1.0"
description = "Adress book RESTful api"
authors = ["Inna Snegurova <snegurova@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
asyncpg = ">=0.30.0,<0.31.0"
greenlet = ">=3.2.0,<4.0.0"
uvicorn = ">=0.34.2,<0.35.0"
fastapi = ">=0.115.12,<0.116.0"
email-validator = ">=2.2.0,<3.0.0"
pydantic-settings = ">=2.9.1,<3.0.0"
python-jose = { version = ">=3.4.0,<4.0.0", extras = ["cryptography"] }
passlib = { version = ">=1.7.4,<2.0.0", extras = ["bcrypt"] }
libgravatar = ">=1.0.4,<2.0.0"
python-multipart = "^0.0.6"
fastapi-mail = "^1.4.2"
jinja2 = "^3.1.6"
bcrypt = "<4.1"
slowapi = "^0.1.9"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
alembic = "^1.15.2"

